syntax = "proto3";

option go_package = "./pb";

package proto;

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message CreateUserRequest {
    string email = 1;
    string password = 2;
}

message CreateUserResponse {
    string message = 1;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    string email = 1;
}